Add update/delete to Subscription api and update client code. (#579)
* Add update/delete to Subscription api and update client code.

* Fix VSTS commenting

* PR Feedback
